--- a/OnTheFlyStats.Test/OnTheFlyStats.Test.csproj
+++ b/OnTheFlyStats.Test/OnTheFlyStats.Test.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="TextFormatting, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TextFormatting.1.0.0\lib\netstandard2.0\TextFormatting.dll</HintPath>
+    </Reference>
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\packages\xunit.abstractions.2.0.1\lib\net35\xunit.abstractions.dll</HintPath>
     </Reference>
@@ -68,7 +71,6 @@
   <ItemGroup>
     <Compile Include="ExtensionsTest.cs" />
     <Compile Include="FormattedStatsTest.cs" />
-    <Compile Include="InvariantCultureRoundingFormatTest.cs" />
     <Compile Include="Mocks\StatsMock1.cs" />
     <Compile Include="OneLineStatsFormatterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
