--- a/OnTheFlyStats/OnTheFlyStats.csproj
+++ b/OnTheFlyStats/OnTheFlyStats.csproj
@@ -13,8 +13,12 @@
     <PackageProjectUrl>https://github.com/PFalkowski/OnTheFlyStats</PackageProjectUrl>
     <RepositoryUrl>https://github.com/PFalkowski/OnTheFlyStats</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
-    <PackageReleaseNotes>Change IStatsFormatter to generic IFormatter&lt;T&gt;</PackageReleaseNotes>
+    <Version>2.1.0</Version>
+    <PackageReleaseNotes>Add extension method that calculates Stats in one go</PackageReleaseNotes>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="TextFormatting" Version="1.0.0" />
+  </ItemGroup>
 
 </Project>
