--- a/OnTheFlyStats.Test/packages.config
+++ b/OnTheFlyStats.Test/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.2.0" targetFramework="net471" />
+  <package id="Extensions.Standard" version="3.0.1" targetFramework="net471" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net471" />
+  <package id="StandardInterfaces" version="1.0.0" targetFramework="net471" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net471" />
   <package id="TextFormatting" version="1.0.0" targetFramework="net471" />
   <package id="xunit" version="2.3.1" targetFramework="net471" />
