--- a/OnTheFlyStats.Test/packages.config
+++ b/OnTheFlyStats.Test/packages.config
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.2.0" targetFramework="net471" />
-  <package id="Extensions.Standard" version="3.0.1" targetFramework="net471" />
-  <package id="NSubstitute" version="3.1.0" targetFramework="net471" />
-  <package id="StandardInterfaces" version="1.0.0" targetFramework="net471" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net471" />
-  <package id="TextFormatting" version="1.0.0" targetFramework="net471" />
-  <package id="xunit" version="2.3.1" targetFramework="net471" />
-  <package id="xunit.abstractions" version="2.0.1" targetFramework="net471" />
-  <package id="xunit.analyzers" version="0.7.0" targetFramework="net471" />
-  <package id="xunit.assert" version="2.3.1" targetFramework="net471" />
-  <package id="xunit.core" version="2.3.1" targetFramework="net471" />
-  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net471" />
-  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net471" />
-  <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net471" developmentDependency="true" />
+  <package id="Castle.Core" version="4.4.1" targetFramework="net471" />
+  <package id="Extensions.Standard" version="4.0.0" targetFramework="net471" />
+  <package id="NSubstitute" version="4.2.2" targetFramework="net471" />
+  <package id="StandardInterfaces" version="2.0.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net471" />
+  <package id="TextFormatting" version="2.0.0" targetFramework="net471" />
+  <package id="xunit" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="net471" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net471" />
+  <package id="xunit.assert" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.core" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.runner.visualstudio" version="2.4.3" targetFramework="net471" developmentDependency="true" />
 </packages>
