--- a/OnTheFlyStats.Test/OnTheFlyStats.Test.csproj
+++ b/OnTheFlyStats.Test/OnTheFlyStats.Test.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Mocks\StatsMock1.cs" />
     <Compile Include="OneLineStatsFormatterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReceiverOperatorCharacteristicTest.cs" />
     <Compile Include="StatsTest.cs" />
   </ItemGroup>
   <ItemGroup>
