--- a/OnTheFlyStats.Test/OnTheFlyStats.Test.csproj
+++ b/OnTheFlyStats.Test/OnTheFlyStats.Test.csproj
@@ -47,6 +47,9 @@
       <HintPath>..\packages\Extensions.Standard.4.0.0\lib\netstandard2.0\Extensions.Standard.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NSubstitute, Version=4.2.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
       <HintPath>..\packages\NSubstitute.4.2.2\lib\net46\NSubstitute.dll</HintPath>
     </Reference>
