--- a/OnTheFlyStats.Test/packages.config
+++ b/OnTheFlyStats.Test/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Castle.Core" version="4.4.1" targetFramework="net471" />
   <package id="Extensions.Standard" version="4.0.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NSubstitute" version="4.2.2" targetFramework="net471" />
   <package id="StandardInterfaces" version="2.0.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net471" />
