Migrate project to .NET Standard 2.1. Rename parameters of Activate() method. Enhance the PrettyPrint feature with optional lenght and title parameters to allow customization

--- a/OnTheFlyStats/OnTheFlyStats.csproj
+++ b/OnTheFlyStats/OnTheFlyStats.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>Piotr Falkowski</Authors>
     <Company>Piotr Falkowski</Company>
     <Description>Do you find yourself adding numbers to the collection and recalculating mean each time? This package is intended to solve the issue. The statistics are always ready and calculating mean for next element does not require iterating over whole collection. On-the-fly calculation of mean, variance, standard deviation, ZScore, sum, min, max and more supported. Create Confusion Matrixes using ReceiverOperatorCharacteristic class, that will calculate Accuracy etc. on the fly.</Description>
@@ -20,8 +20,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="StandardInterfaces" Version="2.0.0" />
+    <PackageReference Include="Extensions.Standard" Version="6.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="StandardInterfaces" Version="3.1.0" />
     <PackageReference Include="TextFormatting" Version="2.0.0" />
   </ItemGroup>
 
